# pyinstaller-CICD

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: pyinstaller-build-withUV.yml  pyinstaller-build.yml
