[project]
name = "pyinstaller-cicd"
version = "0.1.0"
description = "Making a package with pyinstaller"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyinstaller>=6.14.1",
    "pyqt5>=5.15.11",
]

[tool.uv]
constraint-dependencies = [
    "pyqt5-qt5<=5.15.2; sys_platform == 'win_amd64'",
    "pyqt5-qt5>=5.15.16; sys_platform == 'linux'",
]
